# bug

./: .dockerignore  .gitattributes  .gitignore  BugLexer.g4  BugLexer.tokens  BugParser.g4  Dockerfile  Pipfile  compiler.py  pyproject.toml  readme.md  setup.cfg
compiler/: ast.py  compiler.py  error_listener.py  parse_tree_visitor.py  symbol_table.py  visitor.py
examples/averages/: Main.bug
examples/fibonacci/: Main.bug
examples/hello_world/: Main.bug
examples/io/: Main.bug
examples/particles/: Main.bug
generator/: ast_visitor.py  preamble.py  symbol_table.py  wasm_generator_visitor.py
parser/: BugLexer.interp  BugLexer.py  BugLexer.tokens  BugParser.interp  BugParser.py  BugParser.tokens  BugParserListener.py  BugParserVisitor.py
semantic_analysis/: declaration_analysis_vistor.py
symbol_table/: symbol_table.py  type.py  types.py
tests/: conftest.py  test_ast_generation.py  test_code_generation.py  test_full_compiler.py  test_preamble.py  test_semantic_analysis.py  test_wasm_code_generation.py  test_wasm_generation.py  test_wasm_printing.py
tests/helpers/: wasm.py
tests/snapshots/: snap_test_full_compiler.py  snap_test_preamble.py  snap_test_wasm_generation.py  snap_test_wasm_printing.py
visualiser/: README.md
visualiser/backend/: Cargo.toml
visualiser/backend/src/: main.rs  tests.rs
visualiser/frontend/: package.json
visualiser/frontend/pages/: index.tsx
visualiser/pages/: index.tsx
visualiser/src/components/: code-editor.tsx  console.tsx  memory.tsx  panel.tsx  resizer.tsx  (+3 more)
wasm/: generate.py  model.py  printer.py  wat_to_wasm.py
(+20 files in other folders)
