[package]
name = "backend"
version = "0.1.0"
authors = ["Alan Foster <alan@alanfoster.me>"]
edition = "2018"
publish = false

[dependencies]
rocket = "0.4.7"
wabt = "0.7.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]